# PEA_1

./: Algorithms.cpp  Algorithms.h  CMakeLists.txt  FileOpener.cpp  FileOpener.h  Matrix.cpp  Matrix.h  Pomiar.cpp  Pomiar.h  README.md  main.cpp
